2002-03-07  Max Horn  <max@quendi.de>

	* PkgVersion.pm (initialize): Expand percents in even more fields now:
	Suggests, Enhances, Recommends and Pre-Depends.
	(expand_percent_if_available): First converts field parameter to lower case.

2002-03-06  Max Horn  <max@quendi.de>

	* PkgVersion.pm: Multitude of changes, implementing initial splitoff 
	support. Percent expansion is now done in all dependency related fields.

	* Package.pm (inject_description): Return the created PkgVersion object
	to the called. Used by splitoff code

	* Services.pm (read_properties): Split this function, creating two new
	called read_properties_var and read_properties_lines, which take a text
	variable / a list of strings, instead of a file. Used by splitoff code.

2002-02-23  Max Horn  <max@quendi.de>

	* NetAccess.pm (fetch_url_to_file, download_cmd): Allow the user to
	resume partial downloads.
	
	* NetAccess.pm (download_cmd): Added 'DownloadMethod' field to fink.conf
	(thanks to Christian Swinehart).

	* NetAccess.pm (download_cmd): If we use curl, make sure it treats 
	error 404 properly, i.e. fail instead of downloading the error page
	(thanks to Joseph Bauer).

	* Engine.pm (, cmd_fetch_allcmd_fetch_all_missing): keep going even if a
	single file could not be downloaded. (thanks to Randal L. Schwartz). 

2002-02-01  Max Horn  <max@quendi.de>

	* Validation.pm: deb file validator now warns if files are installed
	outside of /sw.

2002-01-27  Max Horn  <max@quendi.de>

	* Validation.pm: Warn on unknown licenses.

2002-01-26  Max Horn  <max@quendi.de>

	* Validation.pm: Many more problems are detected now

	* Engine.pm (restart_as_root): Pass on more options to new instance

	* *.pm: Changed to use new is_verbose() function to determine verbosity
	
	* Config.pm (is_verbose): New function, returns true if verbose mode is on

	* Validation.pm: Only be verbose in verbose mode

	* Validation.pm: Warn on missing license field

2002-01-11  Max Horn  <max@quendi.de>
